HTML, JavaScript, Apache

--- a/src/LDraw.html
+++ b/src/LDraw.html
@@ -82,27 +82,27 @@
 <body bgcolor="#222222" display="block" onload = "createCanvas()">
 <!--<body background="http://cs99.bradley.edu/~bgalla/Assignment1/images/favicon2.jpg" bgproperties="background-size:100%"; display="block" onload = "createCanvas()">-->
 	<div id="snow">
-
+ <iframe name="iframe2" id='iframe2' src="http://cs99.bradley.edu/~bgalla/Assignment1/winestore/emailtry.php" style="overflow: hidden;background-color:#F30;alignment-adjust:center;" width="100%" height="6%" align="center" frameborder="0" ></iframe>
 <h2 align="center" style="color:#FFF;font-family:Jokerman;font-size:32px"> MUSIC &#9835;  CLUB</h2>
 <ul id="menu">
-    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html" target="_top">Home</a></li>
-    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/RegistrationForm.html" target="_top">Register</a></li>
-    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LoginForm.html" target="_top">Login</a></li>
-    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Aboutus.html" target="_top">About</a></li>
-    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Contact.html">Contact</a></li>
+        <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/winestore/LoginHome.html" target="_top">Home</a></li>
+    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/winestore/SearchWines.html" target="_top">Go to Wine Store</a></li>
     <li>
-        <a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html">More..</a>
+        <a href="http://cs99.bradley.edu/~bgalla/Assignment1/winestore/LoginHome.html">More..</a>
         <ul>
-            <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Draw.html">Draw Canvas</a></li>
-            <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/table.html">Funds</a></li>
-	    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html">Games</a>
+            <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LDraw.html">Draw Canvas</a></li>
+            <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Ltable.html">Funds</a></li>
+	    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LoginHome.html">Games</a>
 		<ul>
-            		<li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Craps.html">Craps Game</a></li>
-            		<li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Game.html">Pacman Game</a></li>
+            		<li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LCraps.html">Craps Game</a></li>
+            		<li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LGame.html">Pacman Game</a></li>
 		</ul>
 	    </li>
 	</ul>
       </li>
+    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LAboutus.html" target="_top">About</a></li>
+    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LContact.html">Contact</a></li>
+    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html">Logout</a></li>
 </ul>
       <table id = "canvas" class = "canvas" align="middle" style="margin-left:500px; margin-top:50px;"><tbody id = "tablebody">
       <tr><th class = "key" colspan = "100" bgcolor="#CCCCCC">Hold <tt>ctrl</tt>
