--- a/src/LContact.html
+++ b/src/LContact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>About us</title>
+<title>contact</title>
 <link href="http://cs99.bradley.edu/~bgalla/Assignment1/css/events.css" rel="stylesheet" type="text/css" />
 <link href="http://cs99.bradley.edu/~bgalla/Assignment1/images/favicon.png" rel="icon" type="image/x-icon" />
 <link href="http://cs99.bradley.edu/~bgalla/Assignment1/css/samplecss.css" rel="stylesheet" type="text/css" />
@@ -38,39 +38,39 @@ body {
 
 <body background="http://cs99.bradley.edu/~bgalla/Assignment1/images/favicon2.jpg" bgproperties="background-size:100%"; display="block">
 <div id="snow">
-
+ <iframe name="iframe2" id='iframe2' src="http://cs99.bradley.edu/~bgalla/Assignment1/winestore/emailtry.php" style="overflow: hidden;background-color:#F30;alignment-adjust:center;" width="100%" height="6%" align="center" frameborder="0" ></iframe>
 <h2 align="center" style="color:#FFF;font-family:Jokerman;font-size:32px"> MUSIC &#9835;  CLUB</h2>
 <ul id="menu">
-    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html" target="_top">Home</a></li>
-    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/RegistrationForm.html" target="_top">Register</a></li>
-    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LoginForm.html" target="_top">Login</a></li>
-    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Aboutus.html" target="_top">About</a></li>
-    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Contact.html">Contact</a></li>
+       <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/winestore/LoginHome.html" target="_top">Home</a></li>
+    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/winestore/SearchWines.html" target="_top">Go to Wine Store</a></li>
     <li>
-        <a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html">More..</a>
+        <a href="http://cs99.bradley.edu/~bgalla/Assignment1/winestore/LoginHome.html">More..</a>
         <ul>
-            <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Draw.html">Draw Canvas</a></li>
-            <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/table.html">Funds</a></li>
-	    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html">Games</a>
+            <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LDraw.html">Draw Canvas</a></li>
+            <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Ltable.html">Funds</a></li>
+	    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LoginHome.html">Games</a>
 		<ul>
-            		<li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Craps.html">Craps Game</a></li>
-            		<li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Game.html">Pacman Game</a></li>
+            		<li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LCraps.html">Craps Game</a></li>
+            		<li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LGame.html">Pacman Game</a></li>
 		</ul>
 	    </li>
 	</ul>
       </li>
+    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LAboutus.html" target="_top">About</a></li>
+    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LContact.html">Contact</a></li>
+        <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html">Logout</a></li>
 </ul>
 <time><h6 id="demo" ></h6></time>
 			<script>
 				document.getElementById("demo").innerHTML = Date();
 			</script>
 
-<br>
+
 <br>
 <br>
 <h3 align="center" style="color:#FF4500; font-family:Verdana,sans-serif; font-size:22px">WELCOME TO MUSIC CLUB</h3>
-<h4 align="justify" style="color:#FFA500; background-color:#fff;font-family:Verdana,sans-serif; font-size:16px">
-Music Club become the largest nonprofit organization in America to promote and support American music, performers and music education.  As a grassroots organization working in communities throughout America, we provide musical opportunities for all ages: professional and amateur musicians, benefactors, volunteers, music lovers, music teachers, music students, and supportive parents.  Discover the many opportunities and activities in which our over 135,000 members participate: Festival programs, competitive events, community outreach or just meeting music lovers in your community.  
+<h4 align="center" style="color:#FFA500; background-color:#fff;font-family:Verdana,sans-serif; font-size:16px">
+Contact us at <a href = "mailto:mc@musicclub.com">mc@musicclub.com</a>
 </h4>
 <br><br><br><br><br><br><br><br>
 <div id="#" align="center"><img id = "image" src = "http://cs99.bradley.edu/~bgalla/Assignment1/r1.png" alt = "Beam"></div>
