--- a/src/LGame.html
+++ b/src/LGame.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"><title>Music Club</title>
 <link href="http://cs99.bradley.edu/~bgalla/Assignment1/css/samplecss.css" rel="stylesheet" type="text/css" />
-<link href="http://cs99.bradley.edu/~bgalla/Assignment1/css/snow.css" rel="stylesheet" type="text/css" />
 <link href="http://cs99.bradley.edu/~bgalla/Assignment1/images/favicon.png" rel="icon" type="image/x-icon" />
+<link href="http://cs99.bradley.edu/~bgalla/Assignment1/css/snow.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript">
   $(function() {
   if ($.browser.msie && $.browser.version.substr(0,1)<7)
@@ -18,15 +18,19 @@
 });
 </script>
 </head>
-	<body bgcolor="#222222">
-<div id="snow">
-
-<h2 align="center" style="color:#FFF;font-family:Jokerman;font-size:32px"> MUSIC &#9835;  CLUB</h2>
+	<body background="http://cs99.bradley.edu/~bgalla/Assignment1/images/favicon2.jpg" bgproperties="width=:100%; height:100%" display="block">
+	<div id="snow">
+ <iframe name="iframe2" id='iframe2' src="http://cs99.bradley.edu/~bgalla/Assignment1/winestore/emailtry.php" style="overflow: hidden;background-color:#F30;alignment-adjust:center;" width="100%" height="6%" align="center" frameborder="0" ></iframe>
+	<h2 align="center" style="color:#FFF;font-family:Jokerman;font-size:32px"> MUSIC &#9835;  CLUB</h2>
+<h3 align="right" align="center" style="color:#CCC; font-family:Verdana,sans-serif; font-size:18px">
+    	<a href="http://cs99.bradley.edu/~bgalla/Assignment1/LoginForm.html" target="_self">
+		<input type="button" value="Logout" name="rlogout" align="top"></a>
+        </h3>
 <ul id="menu">
-     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LoginHome.html" target="_top">Home</a></li>
+     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/winestore/LoginHome.html" target="_top">Home</a></li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/winestore/SearchWines.html" target="_top">Go to Wine Store</a></li>
     <li>
-        <a href="http://cs99.bradley.edu/~bgalla/Assignment1/LoginHome.html">More..</a>
+        <a href="http://cs99.bradley.edu/~bgalla/Assignment1/winestore/LoginHome.html">More..</a>
         <ul>
             <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LDraw.html">Draw Canvas</a></li>
             <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Ltable.html">Funds</a></li>
@@ -40,12 +44,10 @@
       </li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LAboutus.html" target="_top">About</a></li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LContact.html">Contact</a></li>
-  <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html">Logout</a></li>
-</ul>
-	<h1 align="center" style="font-family:Verdana,sans-serif; font-size:18px;color:#ccc;">
-        Your Login is successful.
-        </h1>
-        <iframe name="iframe1" id='iframe2' src="http://cs99.bradley.edu/~bgalla/Assignment1/cgi-bin/loginsuccess.txt" align="middle" scrolling="no" frameborder="0" style="overflow: hidden; height: 100%; width: 100%; position: absolute;background-color:#CCC;" height="100%" width="100%">
+    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html">Logout</a></li>
+</ul>    	
+        <iframe name="iframe1" id='iframe2' src="http://cs99.bradley.edu/~bgalla/Assignment1/pacman/index.html" align="middle" scrolling="no" frameborder="0" style="overflow: hidden; height: 100%; width: 100%; position: absolute;" height="100%" width="100%">
         </iframe> 
+</div>
 	</body>
 </html>
