Ajax Client, Web Service

--- a/src/LGame.html
+++ b/src/LGame.html
@@ -44,6 +44,7 @@
       </li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LAboutus.html" target="_top">About</a></li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LContact.html">Contact</a></li>
+    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Gmap.html">Map</a></li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html">Logout</a></li>
 </ul>    	
         <iframe name="iframe1" id='iframe2' src="http://cs99.bradley.edu/~bgalla/Assignment1/pacman/index.html" align="middle" scrolling="no" frameborder="0" style="overflow: hidden; height: 100%; width: 100%; position: absolute;" height="100%" width="100%">
