--- a/src/LoginForm.html
+++ b/src/LoginForm.html
@@ -73,6 +73,7 @@ input[type=submit],input[type=reset],input[type=button] {
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LoginForm.html" target="_top">Login</a></li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Aboutus.html" target="_top">About</a></li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Contact.html">Contact</a></li>
+    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Gmap.html">Map</a></li>
     <li>
         <a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html">More..</a>
         <ul>
