--- a/src/Ltable.html
+++ b/src/Ltable.html
@@ -97,6 +97,7 @@ body {
       </li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LAboutus.html" target="_top">About</a></li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LContact.html">Contact</a></li>
+    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Gmap.html">Map</a></li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html">Logout</a></li>
 </ul>
 	<h3 align="center" style="color:#808000;font-family: "Arial Narrow",sans-serif;font-size:14px">Music Club funds to provide musical opportunities for all ages:<em>
