--- a/src/Aboutus.html
+++ b/src/Aboutus.html
@@ -46,6 +46,7 @@ body {
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LoginForm.html" target="_top">Login</a></li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Aboutus.html" target="_top">About</a></li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Contact.html">Contact</a></li>
+    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Gmap.html">Map</a></li>
     <li>
         <a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html">More..</a>
         <ul>
