--- a/src/LDraw.html
+++ b/src/LDraw.html
@@ -102,6 +102,7 @@
       </li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LAboutus.html" target="_top">About</a></li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LContact.html">Contact</a></li>
+    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Gmap.html">Map</a></li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html">Logout</a></li>
 </ul>
       <table id = "canvas" class = "canvas" align="middle" style="margin-left:500px; margin-top:50px;"><tbody id = "tablebody">
