--- a/src/loginsuccess.html
+++ b/src/loginsuccess.html
@@ -40,6 +40,7 @@
       </li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LAboutus.html" target="_top">About</a></li>
     <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/LContact.html">Contact</a></li>
+    <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Gmap.html">Map</a></li>
   <li><a href="http://cs99.bradley.edu/~bgalla/Assignment1/Home.html">Logout</a></li>
 </ul>
 	<h1 align="center" style="font-family:Verdana,sans-serif; font-size:18px;color:#ccc;">
